--- a/SkillFactory/templates/polls/index.html
+++ b/SkillFactory/templates/polls/index.html
@@ -1,3 +1,3 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'polls/style.css' %}">
-<link rel="shortcut icon" type="image/x-icon" href="{% static 'polls/favicon.ico' %}"/>
+<link rel="shortcut icon" type="image/png" href="{% static 'polls/favicon.ico' %}"/>
