Added prometheus app, and staff for dev.

--- a/SkillFactory/templates/polls/index.html
+++ b/SkillFactory/templates/polls/index.html
@@ -1,3 +1,4 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'polls/style.css' %}">
+<div>Software DB name is {{db_name}}</div>
 <link rel="shortcut icon" type="image/png" href="{% static 'polls/favicon.ico' %}"/>
